[gd_scene load_steps=7 format=3 uid="uid://drcg1qstcdjgw"]

[ext_resource type="PackedScene" uid="uid://elxg1cxt605g" path="res://Turret/Projectile.tscn" id="1_pgatw"]
[ext_resource type="Script" path="res://Turret/Turret.gd" id="1_xr6sh"]

[sub_resource type="CylinderMesh" id="CylinderMesh_w1bch"]
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_peatd"]
top_radius = 0.6
bottom_radius = 0.6
height = 0.4

[sub_resource type="CylinderMesh" id="CylinderMesh_m2avk"]
top_radius = 0.125
bottom_radius = 0.125
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_7mhr1"]
top_radius = 0.4
bottom_radius = 0.6
height = 0.2

[node name="Turret" type="Node3D"]
script = ExtResource("1_xr6sh")
projectile = ExtResource("1_pgatw")

[node name="TurretBase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_w1bch")

[node name="TurretTop" type="MeshInstance3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
mesh = SubResource("CylinderMesh_peatd")
skeleton = NodePath("../..")

[node name="Barrel" type="MeshInstance3D" parent="TurretBase/TurretTop"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0.75)
mesh = SubResource("CylinderMesh_m2avk")

[node name="TurretRoof" type="MeshInstance3D" parent="TurretBase/TurretTop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
mesh = SubResource("CylinderMesh_7mhr1")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
